feat: release v1.1.0 with multi-slot state cache, animation LOD, fullbright engine mode, unrolled frustum culler, and Exordium GuiRenderState pipeline
- Bump mod version to 1.1.0 in gradle.properties, build.gradle, and README.md
- Implement 8-slot multi-descriptor VulkanStateCache with branchless dynamic state filters (117.96M ops/sec)
- Add distance-tiered living entity AnimationLodEvaluator and shadow culling
- Add ASS PC Engine Fullbright and light update skipping mixins
- Add branchless FastMath and unrolled 6-plane FrustumCuller (64.15M tests/sec)
- Integrate modern Minecraft 1.21.11 GuiRenderState Exordium pipeline
- Add zero-allocation transient buffer offset slicing and JUnit 5 microbenchmarks
- Update comprehensive documentation and installation guides in README.md