@@ -1,5 +1,7 @@
 package net.vulkanplus.vulkan;
 
+import java.nio.IntBuffer;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
@@ -26,7 +28,7 @@ public class SwapchainTuning {
 
     /**
      * Selects the best supported present mode given user preference and hardware capabilities.
-     * Prefers MAILBOX (triple-buffering without vsync latency), falling back to FIFO (guaranteed by Vulkan spec).
+     * Strictly prefers: Preferred Mode -> MAILBOX -> FIFO_RELAXED -> FIFO -> IMMEDIATE.
      */
     public static int selectOptimalPresentMode(int preferredMode, List<Integer> availableModes) {
         if (availableModes == null || availableModes.isEmpty()) {
@@ -37,7 +39,11 @@ public class SwapchainTuning {
             return preferredMode;
         }
 
-        if (preferredMode == VK_PRESENT_MODE_MAILBOX_KHR && availableModes.contains(VK_PRESENT_MODE_FIFO_RELAXED_KHR)) {
+        if (availableModes.contains(VK_PRESENT_MODE_MAILBOX_KHR)) {
+            return VK_PRESENT_MODE_MAILBOX_KHR;
+        }
+
+        if (availableModes.contains(VK_PRESENT_MODE_FIFO_RELAXED_KHR)) {
             return VK_PRESENT_MODE_FIFO_RELAXED_KHR;
         }
 
@@ -45,7 +51,45 @@ public class SwapchainTuning {
             return VK_PRESENT_MODE_FIFO_KHR;
         }
 
-        return availableModes.getFirst();
+        if (availableModes.contains(VK_PRESENT_MODE_IMMEDIATE_KHR)) {
+            return VK_PRESENT_MODE_IMMEDIATE_KHR;
+        }
+
+        return availableModes.get(0);
+    }
+
+    /**
+     * Overload for IntBuffer representing available present modes.
+     */
+    public static int selectOptimalPresentMode(int preferredMode, IntBuffer availableModes) {
+        if (availableModes == null || availableModes.limit() == 0) {
+            return VK_PRESENT_MODE_FIFO_KHR;
+        }
+        List<Integer> list = new ArrayList<>(availableModes.limit());
+        for (int i = 0; i < availableModes.limit(); i++) {
+            list.add(availableModes.get(i));
+        }
+        return selectOptimalPresentMode(preferredMode, list);
+    }
+
+    /**
+     * Determines the optimal swapchain image count to prevent starvation.
+     * When MAILBOX or FIFO is used, returns Math.max(3, minImageCount + 1)
+     * (clamped to maxImageCount if maxImageCount > 0), preventing AMD Mailbox 2-image starvation.
+     */
+    public static int getOptimalImageCount(int presentMode, int minImageCount, int maxImageCount) {
+        int count;
+        if (presentMode == VK_PRESENT_MODE_MAILBOX_KHR || presentMode == VK_PRESENT_MODE_FIFO_KHR || presentMode == VK_PRESENT_MODE_FIFO_RELAXED_KHR) {
+            count = Math.max(3, minImageCount + 1);
+        } else {
+            count = minImageCount + 1;
+        }
+
+        if (maxImageCount > 0 && count > maxImageCount) {
+            count = maxImageCount;
+        }
+
+        return Math.max(count, minImageCount);
     }
 
     public static String getModeName(int mode) {
